Added request for showing task
